Select punctuation (or not) in "Select words" exercises
